Fixed event handling, fixed pictures, fixed jquery

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			</header> 	
 
 			<div id="house">
-				<div class="image1">
+				<div id="housepic" class="image1">
 					<a id="goforward" href="#">forward</a>
 					<a id="goright" href="#">right</a>
 					<a id="goback" href="#">back</a>
