Added the description mechanism

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 	<head>
     	<meta charset="utf-8">
-    	<meta name="description" content="Your description goes here">
-    	<meta name="keywords" content="one, two, three">
+    	<meta name="description" content="Some pictures of my house">
+    	<meta name="keywords" content="stalk, my, house">
 	
-		<title>Blank Template</title>
+		<title>Stalk My House</title>
 		
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
@@ -37,9 +37,7 @@
 				
 			</div>
 
-			<div id="description">
-				
-			</div>
+			<div id="description"></div>
 
 			<footer class="clearfix">
 				<div id="footercontent">
