--- a/index.html
+++ b/index.html
@@ -23,8 +23,18 @@
 		<div id="container">
 			<header>
 				<h1>My House</h1>
-				<h2></h2>
 			</header> 	
+			<nav>
+				<ul id="nav">
+					<li><a href="index.html">Home</a></li>
+					<li><a href="about.html">About</a></li>
+					<li><a href="contact.html">Contact Form</a></li>
+				</ul>
+			</nav>
+			<div id="subheader">
+				<h2></h2>
+			</div>
+
 
 			<div id="house">
 				
