Tidied up the About page

--- a/about.html
+++ b/about.html
@@ -31,10 +31,14 @@
 		</nav>
 		<div class="clear"></div>
 
-		<p>I'm a software developer with over 20 years commercial experience.  I've worked with lots of Microsoft technologies, including Visual Basic and C#, SQL Server.  I also 'Excel' at spreadsheet macros.  One technology that always passed me by was the web so I thought it was about time I bit the bullet to see what all the fuss was about.</p>
-		 <p> So as part of the course that I'm on I needed a project to show off these new-found skills and this is it.  I have no real decent content of my own to showcase but I do know a few musicians and film-makers in the London acoustic music scene so what better way to show my skills off than to showcase some up-and-coming music.	
-		</p>
-
+			<div id="thehouse">
+				<img src="images/house.jpg"></img>
+			</div>
+			<div id="abouttext">
+				<p>This is a once in a lifetime opportunity to have a look around my house.  You will laugh.  You will cry.  You will probably click around for a bit, hear the doorbell, smile, and then go and do something a bit more interesting.</p>
+				 <p> The important thing is that you have joined in.  If by some miracle you've randomly come across this website then you should know that before I did a 10 week course run by General Assembly in London I wouldn't have been able to do this.  If you would like to design similarly bizarre websites then their course is probably the one for you!	
+				</p>
+			</div>
 		<div class="clear"></div>
 		<footer class="clearfix">
 			<div id="footercontent">
