--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<link href='http://fonts.googleapis.com/css?family=Gudea' rel='stylesheet' type='text/css'>
 			
 		<script src="http://code.jquery.com/jquery-latest.min.js"></script>
-		<script src="js/house.js" language="javascript" type="text/javascript"></script>
+		<script src="js/house2.js" language="javascript" type="text/javascript"></script>
 	</head>	
 
 	<body>
